--- a/src/app/user/timetable-master/t-master-teaching-timetable/t-master-teaching-timetable.component.html
+++ b/src/app/user/timetable-master/t-master-teaching-timetable/t-master-teaching-timetable.component.html
@@ -27,7 +27,7 @@
         </svg>
       </button>
 
-      <button (click)="GenerateTimeTable()"   class="inline-flex items-center px-3 py-2 text-sm font-normal text-center text-gray-600 bg-gray-200 rounded-lg hover:bg-gray-300 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:text-gray-300 dark:focus:ring-gray-700"><svg class="w-3 h-3 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 20">
+      <button (click)="openModal()"   class="inline-flex items-center px-3 py-2 text-sm font-normal text-center text-gray-600 bg-gray-200 rounded-lg hover:bg-gray-300 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:text-gray-300 dark:focus:ring-gray-700"><svg class="w-3 h-3 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 20">
       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5v10M3 5a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm0 10a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm9-10v.4A3.6 3.6 0 0 1 8.4 9H6.61A3.6 3.6 0 0 0 3 12.605M14.458 3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"/>
     </svg>Generate TimeTable<svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
@@ -51,6 +51,7 @@
           <th>Day</th>
           <th>Time</th>
           <th>Course</th>
+          <th>Course Code</th>
           <th>Students</th>
           <th>Instructor</th>
           <th>Venue</th>
@@ -60,7 +61,8 @@
         <tr *ngFor="let session of timetable" cdkDrag [cdkDragData]="session">
           <td>{{ session.day }}</td>
           <td>{{ session.time }}</td>
-          <td>{{ session.course_code  }} - {{session.session_type}}</td>
+          <td>{{ session.course_code  }} </td>
+          <td>{{ session.course_name  }}- {{session.session_type}}</td>
           <td>{{ session.groups.join(', ') }}</td>
           <td>{{ session.instructor }}</td>
           <td>{{ session.venue }}</td>
@@ -76,3 +78,105 @@
 
 
   </div>
+
+
+   <!-- Modal -->
+ <div *ngIf="isOpen" class="fixed inset-0 flex items-center justify-center bg-gray-200 bg-opacity-50 rounded-lg">
+  <div class="p-2 mt-20 bg-white rounded-lg shadow-lg " style="width: 500px;">
+
+    <div class="grid justify-between grid-flow-col">
+      <h3 class="mt-2 font-semibold text-md">Timetable Details</h3>
+      <div class="flex justify-end ">
+        <button (click)="closeModal()" class="px-4 py-2 text-white bg-red-500 rounded hover:bg-red-600">
+          Close
+        </button>
+      </div>
+    </div>
+
+
+     <div class="p-3 ">
+        <form (ngSubmit)="GenerateTimeTable()" #generateform="ngForm">
+
+
+
+
+          <div class="mt-4">
+            <label
+              for="short name"
+              class="block mb-2 text-sm font-bold text-gray-900 dark:text-white"
+              >Session Start time</label
+            >
+            <select
+            [(ngModel)]="start_time"
+             name="collage_id"
+              class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
+           >
+           <option   value="07:30">07:30</option>
+           <option   value="08:00">08:00</option>
+
+         </select>
+            <!-- Error message for Students-->
+
+          </div>
+
+             <div class="mt-4">
+            <label
+              for="Semester"
+              class="block mb-2 text-sm font-bold text-gray-900 dark:text-white"
+              >Semester</label
+            >
+
+            <select
+               [(ngModel)]="semester"
+                name="collage_id"
+                 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white"
+              >
+              <option   value="1">1</option>
+              <option   value="2">2</option>
+
+            </select>
+          </div>
+
+
+
+
+          <button
+          [disabled]="!generateform.valid"
+          class="w-full py-2 mt-4 text-white rounded-lg bg-slate-900"
+        >
+        <span *ngIf="isLoading">
+          <svg
+            class="inline w-4 h-4 mr-2 text-white animate-spin"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+          >
+            <circle
+              class="opacity-25"
+              cx="12"
+              cy="12"
+              r="10"
+              stroke="currentColor"
+              stroke-width="4"
+            ></circle>
+            <path
+              class="opacity-75"
+              fill="currentColor"
+              d="M4 12a8 8 0 018-8v8z"
+            ></path>
+          </svg>
+          Loading...
+        </span>
+        <span *ngIf="!isLoading">Generate</span>
+        </button>
+
+
+
+
+        </form>
+
+     </div>
+
+  </div>
+</div>
+
